== Thu  3 Dec 2009 00:52:12 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Added POP upgrades from Nicolas Fouché
* Added patch to handle multiple from lines in email from Luke Grimstrup

== Mon Nov 23 23:34:22 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Resolved Issue #12 - Wrong comment in smtp.rb

== Mon Nov 23 22:35:50 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Changed the way attachments are added so that it does not break depending on the order
  of the Hash passed in.
* Version bump to 1.3.0 - Now works with Edge ActionMailer, MRI 1.8.6, 1.8.7, 1.9.1, all tests passing

== Sun Nov 22 12:19:44 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Added check on add_part to make sure if there is already a body, and if so, make a text_part of the body
* Fixing up attachment adding and making sure multipart emails always have boundaries
* Change Message#attachments to now recursively return all attachments in the email in an ordered flattened array
* Added ability for Mail::Message to accept {:headers => {'custom-header' => 'value', 'another-custom-header' => 'value'}} as a param on init
* Adding ability to Mail::Message to add a part via :part(params) with optional block
* Fixed up QP encoding forcing underscores into everything with a space
* Added ReturnPathField#address
* Updating gem loads and active support loads

== Sat Nov 21 12:52:46 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Changed Mail::Encodings to clean it up, added in unquote_and_convert_to as well as refactor in this area

== Thu Nov 19 04:16:10 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Added sendmail support from (Simon Rozet)
* Changed to bundler for gem dependancies and moved gem generation into rakefile (Simon Rozet)
* Bumped to 1.2.6 for sendmail support

== Wed Nov 18 04:26:21 UTC 2009 Mikel Lindsaar <raasdnil@gmail.com>

* Changed Encodings.param_encode(string) so it intelligently encodes and quotes needed
  items and leaves plain, no special char, US-ASCII alone unquoted.
